Add missing query parameter
